--- a/booking.html
+++ b/booking.html
@@ -23,7 +23,7 @@
   </div>
   <main>
     <div class="navbar">
-      <a href="home.html">Main</a>
+      <a href="index.html">Main</a>
       <a href="booking.html">Reservations</a>
       <a href="#about">About</a>
     </div>
