--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Restaurant Cocina Cartagena</title>   	
 <style>
+	
+* {
+   box-sizing: border-box;
+}
+	
 body { margin:0;
       padding: 0;      
       margin-top: 180px;
